Add snooze feature